Fixed overflow on the height for login page

--- a/src/pages/login/login-page.css
+++ b/src/pages/login/login-page.css
@@ -2,6 +2,9 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    overflow-y: auto;
+    overflow-x: hidden;
+    height: 100vh;
 }
 
 .login-container {
